# langgraph-up-monorepo

./: .codespellignore  .gitignore  CLAUDE.md  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
apps/agent1/: .env.example  langgraph.json  pyproject.toml
apps/agent1/src/agent1/: __init__.py  graph.py  state.py
apps/agent2/: langgraph.json  pyproject.toml
apps/agent2/src/agent2/: __init__.py  graph.py  state.py
apps/sample-agent/: .env.example  README.md  langgraph.json  pyproject.toml
apps/sample-agent/src/sample_agent/: __init__.py  context.py  graph.py  prompts.py  state.py
apps/sample-agent/src/sample_agent/subagents/: __init__.py  math.py  research.py
apps/sample-agent/src/sample_agent/tools/: __init__.py  basic.py  handoff.py
apps/sample-agent/tests/: __init__.py  conftest.py
apps/sample-agent/tests/integration/: __init__.py  test_handoff.py
apps/sample-agent/tests/unit/: __init__.py  test_graph.py
apps/sample-deep-agent/: .env.example  README.md  langgraph.json  pyproject.toml
apps/sample-deep-agent/src/sample_deep_agent/: __init__.py  context.py  graph.py  prompts.py  subagents.py
apps/sample-deep-agent/src/sample_deep_agent/tools/: __init__.py
apps/sample-deep-agent/tests/: __init__.py  conftest.py
apps/sample-deep-agent/tests/integration/: __init__.py  test_hitl.py  test_research.py
apps/sample-deep-agent/tests/unit/: __init__.py  test_graph.py  test_hitl.py
libs/common/: __init__.py
libs/langgraph-up-devkits/: README.md  pyproject.toml
libs/langgraph-up-devkits/src/langgraph_up_devkits/: __init__.py  py.typed
libs/langgraph-up-devkits/src/langgraph_up_devkits/context/: __init__.py  base.py  mixins.py  schemas.py
libs/langgraph-up-devkits/src/langgraph_up_devkits/middleware/: __init__.py  base.py  filesystem_mask.py  model_provider.py  summarization.py
libs/langgraph-up-devkits/src/langgraph_up_devkits/prompts/: __init__.py  templates.py
libs/langgraph-up-devkits/src/langgraph_up_devkits/tools/: __init__.py  fetch.py  mcp.py  search.py  think.py
libs/langgraph-up-devkits/src/langgraph_up_devkits/utils/: __init__.py  prompts.py  providers.py
libs/langgraph-up-devkits/tests/: __init__.py  conftest.py  testing.py
libs/langgraph-up-devkits/tests/integration/: test_middleware.py  test_tools.py
libs/langgraph-up-devkits/tests/unit/: test_context.py  test_middleware.py  test_prompts.py  test_tools.py  test_utils.py
libs/shared/: pyproject.toml
libs/shared/src/shared/: __init__.py  utils.py
scripts/: dev.sh
