[project]
name = "langgraph-up-monorepo"
version = "0.2.0"
description = "A Python monorepo example with LangGraph agents and shared packages"
authors = [
    { name = "Haili Zhang", email = "haili.zhang@outlook.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dependencies = [
]

[tool.uv.workspace]
members = ["apps/*", "libs/langgraph-up-devkits"]

[tool.uv.sources]
langgraph-up-devkits = { workspace = true }

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.2",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 120
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "UP",
]
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
]

[tool.ruff.lint.pydocstyle]
convention = "google"
