[project]
name = "agent1"
version = "0.0.1"
description = "Agent 1 for the Python monorepo"
authors = [
    { name = "Developer", email = "dev@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent1"]

[tool.setuptools.package-dir]
"agent1" = "src/agent1"