[project]
name = "agent2"
version = "0.0.1"
description = "Agent 2 for the Python monorepo"
authors = [
    { name = "Developer", email = "dev@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent2"]

[tool.setuptools.package-dir]
"agent2" = "src/agent2"